--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       signInWithEmailAndPassword(auth, email, password)
         .then(() => {
           alert("Login successful!");
-          window.location.href = "chat.html";
+          window.location.href = "chats.html";
         })
         .catch((error) => {
           alert("Login failed: " + error.message);
