--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,6 @@
       justify-content: center;
       align-items: center;
     }
-
     .container {
       background-color: white;
       padding: 2rem;
@@ -24,11 +23,9 @@
       width: 300px;
       text-align: center;
     }
-
     h2 {
       margin-bottom: 1rem;
     }
-
     input, button {
       width: 100%;
       margin-top: 10px;
@@ -37,18 +34,15 @@
       border: 1px solid #ccc;
       font-size: 1rem;
     }
-
     button {
       background-color: #185a9d;
       color: white;
       border: none;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #104a82;
     }
-
     a {
       color: #185a9d;
       text-decoration: none;
@@ -58,8 +52,9 @@
 <body>
   <div class="container">
     <h2>Sign Up</h2>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
+    <input type="text" id="username" placeholder="Username" />
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
     <button id="signupBtn">Sign Up</button>
     <p>Already have an account? <a href="index.html">Login</a></p>
   </div>
@@ -67,26 +62,35 @@
   <script type="module">
     import { auth, db } from './firebase.js';
     import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+    import { doc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
     const signupBtn = document.getElementById("signupBtn");
 
-    signupBtn.addEventListener("click", () => {
+    signupBtn.addEventListener("click", async () => {
+      const username = document.getElementById("username").value.trim();
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
 
-      if (!email || !password) {
-        alert("Please enter both email and password.");
+      if (!username || !email || !password) {
+        alert("Please fill all fields.");
         return;
       }
 
-      createUserWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          alert("Signup successful!");
-          window.location.href = "index.html";
-        })
-        .catch((error) => {
-          alert("Signup failed: " + error.message);
+      try {
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+
+        await setDoc(doc(db, "users", user.uid), {
+          uid: user.uid,
+          username: username,
+          email: email
         });
+
+        alert("Signup successful!");
+        window.location.href = "index.html";
+      } catch (error) {
+        alert("Signup failed: " + error.message);
+      }
     });
   </script>
 </body>
